# My-Favorite-Story

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Genre.cpp  Genre.h  GenreTesting.cpp  Makefile  OutputText.cpp  OutputText.h  Player.cpp  Player.h  README.md  a.out  cmake_install.cmake  main.cpp  testPlayer.cpp
header/: InputText.h  OutputText.h  inputText.h
headers/: Dating.h  Genre.h  Horror.h  InputText.h  Mint.h  Scene.h  SoundEffect.h  Vanilla.h
src/: CMakeLists.txt  Dating.cpp  Genre.cpp  Horror.cpp  InputText.cpp  Makefile  Mint.cpp  OutputText.cpp  Player.cpp  Scene.cpp  SoundEffect.cpp  Vanilla.cpp  cmake_install.cmake  inputText.cpp  main.cpp
storyFiles/: scene0.txt
storyFiles/dating/: ending.txt  scene1.txt  scene2a.txt  scene2b.txt  scene3a.txt  scene3b.txt  scene4a.txt  scene4b.txt  scene5.5a.txt  scene5.5b.txt  scene5aa.txt  scene5ab.txt  scene5ba.txt  scene5bb.txt  scene6a.txt  scene6b.txt  scene6bb.txt  scene7aa.txt  scene7ab.txt  scene8.txt  scene8a.txt  scene8b.txt
storyFiles/horror/: scene1.5.txt  scene1.5a.txt  scene1.txt  scene2.txt  scene2a.txt  scene3.txt  scene3a.txt  scene4.txt  scene4a.txt  scene5.txt  scene5a.txt  scene6.txt  scene6a.txt  scene7.txt  scene8.txt
test/: CMakeLists.txt  DatingTests.cpp  GenreTesting.cpp  InputTextTest.cpp  Makefile  MintTest.cpp  OutputTextTest.cpp  VanillaTest.cpp  cmake_install.cmake  horrorTests.cpp  sceneFileTest.txt  sceneTests.cpp  testPlayer.cpp
